# agent-long-term-memory

./: .gitignore  CLAUDE.md  LICENSE  Prompt.txt  Prompt_history.md  SETUP_CHECKLIST.md  database_design.md  embedding_builder_design.md  harness_mcp_full_design.md  mcp_server_design.md  start-memory-postgres.ps1  supervisor_architecture_v2.md
agent_embedding_builder/: README.md  agent_embedding_builder.py  environment.yml  pyproject.toml
agent_embedding_builder/Scripts/: copy_src.ps1  run_api.ps1  run_builder.ps1
agent_embedding_builder/app/: __init__.py  build_stats.py  category_inference.py  category_ontology.py  category_rules.py  class_resolution.py  config_jsonc_preprocessor.py  config_loader.py  database.py  embedding_provider.py  file_discovery.py  hash_state.py  local_llm.py  logging_setup.py  markdown_parser.py  metadata_loader.py  models.py  path_utils.py  pipeline.py  query_api.py  retrieval_profile_builder.py  scope_tag_extractor.py  segmenter.py  source_registry.py  text_parser.py
agent_embedding_builder/docs/: category_ontology_guide.md  configuration_guide.md
agent_embedding_builder/sql/: indexes.sql  schema.sql
agent_embedding_builder/tests/: conftest.py  test_config_and_entrypoint.py  test_database_transaction.py  test_discovery_and_parsing.py  test_llm_segment_and_incremental.py  test_ontology_and_pipeline.py  test_query_api.py  test_strict_runtime_behaviors.py  test_sync_reconciliation.py
docs/: DEPLOYMENT.md  commands.md  embedding_api_design_contract.md  harness_design.md  how_to_deply_for_claude.md
harness/: 01-harness-failure.mdc  (+3 more)
(+287 files in other folders)
